<resources>
    <string name="app_name">SampleRepositoryPattern</string>
    <string name="btn_load_posts">Load posts</string>
    <string name="btn_load_users">Load users</string>
    <string name="btn_load_albums">Load albums</string>
    <string name="btn_load_photos">Load photos</string>
    <string name="btn_load_comments">Load comments</string>
    <string name="btn_load_todos">Load todos</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="error_loading_pots">Error: We can\'t load post from server,try it later.</string>
    <string name="error_loading_users">Error: We can\'t load users from server,try it later.</string>
    <string name="user_name">Name: </string>
    <string name="user_nickname">Username: </string>
    <string name="user_email">E-mail: </string>
    <string name="error_loading_comments">Error: Sorry we cannot load comments, try it later</string>
    <string name="no_comments_found">User has no comments yet</string>
    <string name="touch_to_load_comments">Touch to load comments</string>
</resources>
